// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add appointment form Form should pass correct props to all fields 1`] = `
Array [
  <div
    className="sc-dnqmqq clFpjS"
    tabIndex={-1}
  >
    <h2
      className="sc-htpNat jszPot"
      size="MEDIUM"
    >
      There is a problem
    </h2>
    <ul
      className="sc-bZQynM hmHAnm"
    >
      <li
        className="sc-EHOje cxhhxd"
      >
        <a
          className="sc-gzVnrw sc-htoDjs dzdkmR"
          muted={false}
          onClick={[Function]}
          tabIndex={1}
        >
          Start test message
        </a>
      </li>
      <li
        className="sc-EHOje cxhhxd"
      >
        <a
          className="sc-gzVnrw sc-htoDjs dzdkmR"
          muted={false}
          onClick={[Function]}
          tabIndex={2}
        >
          Start test message
        </a>
      </li>
    </ul>
  </div>,
  <table
    className="row-gutters sc-jKJlTe gEzPVl"
  >
    <thead>
      <tr>
        <th
          className="straight width5"
        >
           Prison number 
        </th>
        <th
          className="straight width5"
        >
           Last name 
        </th>
        <th
          className="straight width5"
        >
           First name 
        </th>
        <th
          className="straight width5"
        >
           Start time 
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="row-gutters"
      >
        <td
          className="row-gutters"
        >
          offenderNo1
        </td>
        <td
          className="row-gutters"
        >
          lastName1
        </td>
        <td
          className="row-gutters"
        >
          firstName1
        </td>
        <td
          className="row-gutters"
        >
          <div>
            <label
              className="sc-gqjmRU cLvpfp"
              htmlFor="hours"
            >
              
              <span
                className="sc-iwsKbI cXXGGh"
              >
                Start test message
              </span>
              <div
                className="sc-jzJRlG NAri"
                name="start-time-offenderNo1"
              >
                <label
                  className="sc-gqjmRU FpJsg"
                  defaultValue="--"
                  disabled={false}
                  id="hours"
                  name="hours"
                >
                  <span
                    className="sc-VigVT bXITLn"
                  />
                  <select
                    className="sc-fjdhpX pbsIw"
                    onChange={[Function]}
                    value="undefined"
                  >
                    <option>
                      --
                    </option>
                    <option>
                      21
                    </option>
                    <option>
                      22
                    </option>
                    <option>
                      23
                    </option>
                  </select>
                </label>
                <label
                  className="sc-gqjmRU FpJsg"
                  defaultValue="--"
                  disabled={false}
                  name="minutes"
                >
                  <span
                    className="sc-VigVT bXITLn"
                  />
                  <select
                    className="sc-fjdhpX pbsIw"
                    onChange={[Function]}
                    value="undefined"
                  >
                    <option>
                      --
                    </option>
                    <option>
                      00
                    </option>
                    <option>
                      05
                    </option>
                    <option>
                      10
                    </option>
                    <option>
                      15
                    </option>
                    <option>
                      20
                    </option>
                    <option>
                      25
                    </option>
                    <option>
                      30
                    </option>
                    <option>
                      35
                    </option>
                    <option>
                      40
                    </option>
                    <option>
                      45
                    </option>
                    <option>
                      50
                    </option>
                    <option>
                      55
                    </option>
                  </select>
                </label>
              </div>
            </label>
          </div>
        </td>
      </tr>
      <tr
        className="row-gutters"
      >
        <td
          className="row-gutters"
        >
          offenderNo2
        </td>
        <td
          className="row-gutters"
        >
          lastName2
        </td>
        <td
          className="row-gutters"
        >
          firstName2
        </td>
        <td
          className="row-gutters"
        >
          <div>
            <label
              className="sc-gqjmRU cLvpfp"
              htmlFor="hours"
            >
              
              <span
                className="sc-iwsKbI cXXGGh"
              >
                Start test message
              </span>
              <div
                className="sc-jzJRlG NAri"
                name="start-time-offenderNo2"
              >
                <label
                  className="sc-gqjmRU FpJsg"
                  defaultValue="--"
                  disabled={false}
                  id="hours"
                  name="hours"
                >
                  <span
                    className="sc-VigVT bXITLn"
                  />
                  <select
                    className="sc-fjdhpX pbsIw"
                    onChange={[Function]}
                    value="undefined"
                  >
                    <option>
                      --
                    </option>
                    <option>
                      21
                    </option>
                    <option>
                      22
                    </option>
                    <option>
                      23
                    </option>
                  </select>
                </label>
                <label
                  className="sc-gqjmRU FpJsg"
                  defaultValue="--"
                  disabled={false}
                  name="minutes"
                >
                  <span
                    className="sc-VigVT bXITLn"
                  />
                  <select
                    className="sc-fjdhpX pbsIw"
                    onChange={[Function]}
                    value="undefined"
                  >
                    <option>
                      --
                    </option>
                    <option>
                      00
                    </option>
                    <option>
                      05
                    </option>
                    <option>
                      10
                    </option>
                    <option>
                      15
                    </option>
                    <option>
                      20
                    </option>
                    <option>
                      25
                    </option>
                    <option>
                      30
                    </option>
                    <option>
                      35
                    </option>
                    <option>
                      40
                    </option>
                    <option>
                      45
                    </option>
                    <option>
                      50
                    </option>
                    <option>
                      55
                    </option>
                  </select>
                </label>
              </div>
            </label>
          </div>
        </td>
      </tr>
    </tbody>
  </table>,
]
`;

exports[`Add appointment form Form should render correctly 1`] = `
<form
  onSubmit={[Function]}
>
  <h3
    className="sc-gZMcBi gFbOsO"
  >
     Selected prisoners 
  </h3>
  <span
    className="sc-iwsKbI cXXGGh"
  >
     
    network error
     
  </span>
  <table
    className="row-gutters sc-jKJlTe gEzPVl"
  >
    <thead>
      <tr>
        <th
          className="straight width5"
        >
           Prison number 
        </th>
        <th
          className="straight width5"
        >
           Last name 
        </th>
        <th
          className="straight width5"
        >
           First name 
        </th>
        <th
          className="straight width5"
        >
           Start time 
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="row-gutters"
      >
        <td
          className="row-gutters"
        >
          offenderNo1
        </td>
        <td
          className="row-gutters"
        >
          lastName1
        </td>
        <td
          className="row-gutters"
        >
          firstName1
        </td>
        <td
          className="row-gutters"
        >
          <div>
            <label
              className="sc-gqjmRU FpJsg"
              htmlFor="hours"
            >
              
              <div
                className="sc-jzJRlG cyWbih"
                name="start-time-offenderNo1"
              >
                <label
                  className="sc-gqjmRU FpJsg"
                  defaultValue="--"
                  disabled={false}
                  id="hours"
                  name="hours"
                >
                  <span
                    className="sc-VigVT bXITLn"
                  />
                  <select
                    className="sc-fjdhpX pbsIw"
                    onChange={[Function]}
                    value="21"
                  >
                    <option>
                      --
                    </option>
                    <option>
                      21
                    </option>
                    <option>
                      22
                    </option>
                    <option>
                      23
                    </option>
                  </select>
                </label>
                <label
                  className="sc-gqjmRU FpJsg"
                  defaultValue="--"
                  disabled={false}
                  name="minutes"
                >
                  <span
                    className="sc-VigVT bXITLn"
                  />
                  <select
                    className="sc-fjdhpX pbsIw"
                    onChange={[Function]}
                    value="00"
                  >
                    <option>
                      --
                    </option>
                    <option>
                      00
                    </option>
                    <option>
                      05
                    </option>
                    <option>
                      10
                    </option>
                    <option>
                      15
                    </option>
                    <option>
                      20
                    </option>
                    <option>
                      25
                    </option>
                    <option>
                      30
                    </option>
                    <option>
                      35
                    </option>
                    <option>
                      40
                    </option>
                    <option>
                      45
                    </option>
                    <option>
                      50
                    </option>
                    <option>
                      55
                    </option>
                  </select>
                </label>
              </div>
            </label>
          </div>
        </td>
      </tr>
      <tr
        className="row-gutters"
      >
        <td
          className="row-gutters"
        >
          offenderNo2
        </td>
        <td
          className="row-gutters"
        >
          lastName2
        </td>
        <td
          className="row-gutters"
        >
          firstName2
        </td>
        <td
          className="row-gutters"
        >
          <div>
            <label
              className="sc-gqjmRU FpJsg"
              htmlFor="hours"
            >
              
              <div
                className="sc-jzJRlG cyWbih"
                name="start-time-offenderNo2"
              >
                <label
                  className="sc-gqjmRU FpJsg"
                  defaultValue="--"
                  disabled={false}
                  id="hours"
                  name="hours"
                >
                  <span
                    className="sc-VigVT bXITLn"
                  />
                  <select
                    className="sc-fjdhpX pbsIw"
                    onChange={[Function]}
                    value="21"
                  >
                    <option>
                      --
                    </option>
                    <option>
                      21
                    </option>
                    <option>
                      22
                    </option>
                    <option>
                      23
                    </option>
                  </select>
                </label>
                <label
                  className="sc-gqjmRU FpJsg"
                  defaultValue="--"
                  disabled={false}
                  name="minutes"
                >
                  <span
                    className="sc-VigVT bXITLn"
                  />
                  <select
                    className="sc-fjdhpX pbsIw"
                    onChange={[Function]}
                    value="00"
                  >
                    <option>
                      --
                    </option>
                    <option>
                      00
                    </option>
                    <option>
                      05
                    </option>
                    <option>
                      10
                    </option>
                    <option>
                      15
                    </option>
                    <option>
                      20
                    </option>
                    <option>
                      25
                    </option>
                    <option>
                      30
                    </option>
                    <option>
                      35
                    </option>
                    <option>
                      40
                    </option>
                    <option>
                      45
                    </option>
                    <option>
                      50
                    </option>
                    <option>
                      55
                    </option>
                  </select>
                </label>
              </div>
            </label>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="sc-kpOJdX eMoMhc"
  >
    <button
      className="sc-bdVaJa jyfNnr"
      disabled={false}
      type="submit"
    >
      Add appointment
    </button>
    <button
      className="sc-bdVaJa hdRJwX"
      disabled={false}
      onClick={[Function]}
    >
      Cancel
    </button>
  </div>
</form>
`;
